docs: extend gradle description